<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".InscriptionActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:id="@+id/form_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:layout_marginTop="140dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent">

                <EditText
                    android:id="@+id/txt_carte_rapido"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/EditTextInscription"
                    android:background="@drawable/edt_background2"
                    android:elevation="10dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="40dp"
                    android:layout_marginLeft="40dp"
                    android:layout_marginRight="40dp"
                    android:ems="10"
                    android:hint="@string/numero_carte"
                    android:inputType="number"
                    />

                <EditText
                    android:id="@+id/txt_nom"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/EditTextInscription"
                    android:background="@drawable/edt_background2"
                    android:elevation="10dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="10dp"
                    android:layout_marginLeft="40dp"
                    android:layout_marginRight="40dp"
                    android:ems="10"
                    android:hint="Nom"
                    android:inputType="textCapCharacters"
                    />

                <EditText
                    android:id="@+id/txt_prenom"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/EditTextInscription"
                    android:background="@drawable/edt_background2"
                    android:elevation="10dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="10dp"
                    android:layout_marginLeft="40dp"
                    android:layout_marginRight="40dp"
                    android:ems="10"
                    android:hint="@string/client_firstname"
                    android:inputType="textCapCharacters"
                    />

                <EditText
                    android:id="@+id/txt_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/EditTextInscription"
                    android:background="@drawable/edt_background2"
                    android:elevation="10dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="10dp"
                    android:layout_marginLeft="40dp"
                    android:layout_marginRight="40dp"
                    android:ems="10"
                    android:hint="@string/mail"
                    android:inputType="textEmailAddress"/>

                <EditText
                    android:id="@+id/txt_tel"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/EditTextInscription"
                    android:background="@drawable/edt_background2"
                    android:elevation="10dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="10dp"
                    android:layout_marginLeft="40dp"
                    android:layout_marginRight="40dp"
                    android:ems="10"
                    android:hint="@string/client_phone"
                    android:inputType="number"
                    />

                <EditText
                    android:id="@+id/txt_matricule"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/EditTextInscription"
                    android:background="@drawable/edt_background2"
                    android:elevation="10dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="10dp"
                    android:layout_marginLeft="40dp"
                    android:layout_marginRight="40dp"
                    android:ems="10"
                    android:hint="@string/immatriculation"
                    android:inputType="textCapWords"
                    />

                <EditText
                    android:id="@+id/txt_pwd"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/EditTextInscription"
                    android:background="@drawable/edt_background2"
                    android:elevation="10dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="10dp"
                    android:layout_marginLeft="40dp"
                    android:layout_marginRight="40dp"
                    android:ems="10"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    />

                <EditText
                    android:id="@+id/txt_confirm_pwd"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/EditTextInscription"
                    android:background="@drawable/edt_background2"
                    android:elevation="10dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="10dp"
                    android:layout_marginLeft="40dp"
                    android:layout_marginRight="40dp"
                    android:layout_marginBottom="20dp"
                    android:ems="10"
                    android:hint="@string/confirm_password"
                    android:inputType="textPassword"
                    />
            </LinearLayout>

            <TextView
                android:id="@+id/txt_v_error"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:textColor="@color/colorRed"
                app:layout_constraintTop_toBottomOf="@id/form_layout"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"/>

            <Button
                android:id="@+id/btn_valider"
                android:layout_width="@dimen/dimen_tf_login_width"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:background="@drawable/btn_valider"
                android:text="@string/btn_inscription"
                android:textColor="@color/colorWhite"
                android:textStyle="bold"
                android:textSize="20sp"
                android:textAllCaps="false"
                android:layout_marginBottom="25dp"
                app:layout_constraintTop_toBottomOf="@id/txt_v_error"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"/>

        </android.support.constraint.ConstraintLayout>
    </ScrollView>
</android.support.constraint.ConstraintLayout>