<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/app_background"
    tools:context=".AideActivity">

    <android.support.constraint.ConstraintLayout
        android:id="@+id/baniere"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="#330e06"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent">

        <ImageView
            android:id="@+id/logo_rapido"
            android:layout_width="100dp"
            android:layout_height="30dp"
            android:src="@drawable/logo_rapido_menu"
            android:layout_marginTop="0dp"
            android:layout_marginLeft="0dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=">"
            android:textColor="@color/colorWhite"
            android:textSize="21sp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toRightOf="@id/logo_rapido"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="0dp"
            android:text="@string/menu_aide"
            android:textColor="@color/colorWhite"
            android:textStyle="bold"
            android:textSize="18sp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"/>

        <ImageView
            android:id="@+id/menu_bar"
            android:layout_width="35dp"
            android:layout_height="25dp"
            android:src="@drawable/icone_menu"
            android:layout_marginTop="0dp"
            android:layout_marginEnd="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintRight_toRightOf="@id/logo_rapido"
            />
    </android.support.constraint.ConstraintLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintTop_toBottomOf="@id/baniere">


        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/trait_1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="120dp"
                android:src="@drawable/trait_gris"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <android.support.constraint.ConstraintLayout
                android:id="@+id/menu_signaler"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="11dp"
                app:layout_constraintTop_toBottomOf="@id/trait_1"
                app:layout_constraintLeft_toLeftOf="parent">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:text="@string/menu_aide_problem"
                    android:textSize="17sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginRight="20dp"
                    android:text=">"
                    android:textSize="20sp"
                    android:textColor="@color/colorBlack"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"/>

            </android.support.constraint.ConstraintLayout>

            <ImageView
                android:id="@+id/trait_2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:src="@drawable/trait_gris"
                android:layout_marginTop="11dp"
                app:layout_constraintTop_toBottomOf="@id/menu_signaler"
                app:layout_constraintLeft_toLeftOf="parent"/>

            <android.support.constraint.ConstraintLayout
                android:id="@+id/menu_page_aide"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                app:layout_constraintTop_toBottomOf="@id/trait_2"
                app:layout_constraintLeft_toLeftOf="parent">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:text="@string/menu_aide_pagem"
                    android:textSize="17sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginRight="20dp"
                    android:text=">"
                    android:textSize="20sp"
                    android:textColor="@color/colorBlack"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"/>

            </android.support.constraint.ConstraintLayout>

            <ImageView
                android:id="@+id/trait_6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:src="@drawable/trait_gris"
                android:layout_marginTop="11dp"
                app:layout_constraintTop_toBottomOf="@id/menu_page_aide"
                app:layout_constraintLeft_toLeftOf="parent"/>

            <android.support.constraint.ConstraintLayout
                android:id="@+id/menu_confidentialite"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                app:layout_constraintTop_toBottomOf="@id/trait_6"
                app:layout_constraintLeft_toLeftOf="parent">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:text="@string/menu_aide_confident"
                    android:textSize="17sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginRight="20dp"
                    android:text=">"
                    android:textSize="20sp"
                    android:textColor="@color/colorBlack"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"/>

            </android.support.constraint.ConstraintLayout>

            <ImageView
                android:id="@+id/trait_3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:src="@drawable/trait_gris"
                android:layout_marginTop="11dp"
                app:layout_constraintTop_toBottomOf="@id/menu_confidentialite"
                app:layout_constraintLeft_toLeftOf="parent"/>

        </android.support.constraint.ConstraintLayout>
    </ScrollView>
</android.support.constraint.ConstraintLayout>